--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -30,6 +30,7 @@
           <li>added <code>display.inputFormat</code> that takes <code>DateTimeFormatOptions</code>;</li>
         </ul>
       </li>
+      <li>removed <code>collapse</code></li>
       <li>removed <code>extraFormats</code></li>
       <li>removed <code>widgetParent</code></li>
       <li>removed <code>widgetPositioning</code></li>
@@ -60,7 +61,6 @@
           <li>buttons</li>
           <li>widgetPositioning</li>
           <li>icons</li>
-          <li>collapse</li>
           <li>inline</li>
         </ul>
       </li>
