--- a/src/docs/partials/options.html
+++ b/src/docs/partials/options.html
@@ -180,7 +180,9 @@ new tempusDominus.TempusDominus(..., {
             class='fas fa-anchor'></i></a></h4>
           <p>
             <strong>Accepts: true|false</strong><br />
-
+            <img src='images/calendar-view.png' class="img-fluid img-thumbnail d-block" alt='Date View'/>
+            Turns on or off the date view. If option is false the user would only be able to select month and year
+            for instance.
           <p>
 
           <h4 id='displayComponentsMonth'>month<a class='anchorjs-link' aria-label='Anchor'
@@ -189,6 +191,7 @@ new tempusDominus.TempusDominus(..., {
           </h4>
           <p>
             <strong>Accepts: true|false</strong><br />
+          Turns on or off the month selection view.
 
           <p>
 
@@ -223,7 +226,9 @@ new tempusDominus.TempusDominus(..., {
           </h4>
           <p>
             <strong>Accepts: true|false</strong><br />
-
+            A convenience flag that can enable or disable all of the calendar components like date, month, year,
+            decades, century.
+            This flag must be true for any of the calendar components to be visible, even if those options are true.
           <p>
 
           <h4 id='displayComponentsHours'>hours<a class='anchorjs-link' aria-label='Anchor'
