options are documented yay

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -62,6 +62,7 @@
           <li>widgetPositioning</li>
           <li>icons</li>
           <li>inline</li>
+          <li>keepOpen</li>
         </ul>
       </li>
       <li>disabledTimeIntervals is now an array of <code>{ from: DateTime, to: DateTime }</code>
@@ -69,6 +70,10 @@
       <li>removed check for <code>dateOptions</code> on the element data set. jQuery hid allowing an object by looping
         through the properties
       </li>
+      <li>removed <code>keybindings</code> - this might come back later</li>
+      <li>removed <code>readonly<</code></li>
+      <li>removed <code>ignoreReadonly<</code></li>
+      <li>removed <code>focusOnShow<</code></li>
     </ul>
     <h3 id='styles'>Styles</h3>
     <h4 id='tip-all-new-css-values-are-in-namespace-css-in-the-consts-ts-file'>Tip: All new css values are in <code>Namespace.Css.*</code>
