--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -188,13 +188,18 @@
     </div>
     <script type='text/javascript'>
       const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'), {
+        /*restrictions: {
+          maxDate: new tempusDominus.DateTime().manipulate(-1, 'date').startOf('date')
+        },
         display: {
-          calendarWeeks: true,
           components: {
-            //seconds: true,
-            //useTwentyfourHour: true
-          }
-        }
+            clock: false
+          },
+          keepOpen: true
+        },*/
+        //allowInputToggle: true,
+        multipleDates: true,
+
       });
     </script>
   </section>
@@ -443,7 +448,6 @@
    display: {
      viewMode: 'clock',
      components: {
-       century: false,
        decades: false,
        year: false,
        month: false,
@@ -498,7 +502,6 @@
         display: {
           viewMode: 'clock',
           components: {
-            century: false,
             decades: false,
             year: false,
             month: false,
@@ -577,7 +580,6 @@
    display: {
      viewMode: 'clock',
      components: {
-       century: true,
        decades: true,
        year: true,
        month: true,
@@ -633,7 +635,6 @@
           components: {
             date: true,
             decades: true,
-            century: true,
             month: true,
             year: true,
             hours: false,
